--- a/perfumeshop/accounts/templates/accounts/auth/signup.html
+++ b/perfumeshop/accounts/templates/accounts/auth/signup.html
@@ -15,7 +15,7 @@
       <div class="container-fluid d-flex justify-content-around">
           <ul class="navbar-nav ms-2 fs-5" style="flex-direction: row">
       </ul>
-        <a class="navbar-brand mx-auto position-absolute fs-2 fw-bolder" href="{% url "index" %}">
+        <a class="navbar-brand mx-auto position-absolute fs-2 fw-bolder" href="{% url 'main:index' %}">
           BIG-SHOES
         </a>
           <ul class="navbar-nav ms-2 fs-5" style="flex-direction: row">
