--- a/perfumeshop/main/templates/main/index.html
+++ b/perfumeshop/main/templates/main/index.html
@@ -22,7 +22,7 @@
             <a class="nav-scroller__item" href="#block_3">Для него</a>
             <a class="nav-scroller__item" href="#"><img src="{% static 'main/img/parfume.png'%}" width="60"></a>
             <a class="nav-scroller__item" href="#block_5">Каталог</a>
-            <a class="nav-scroller__item" href="registr.html">Профиль</a>
+            <a class="nav-scroller__item" href="{% url 'accounts:signup' %}">Профиль</a>
             <a class="nav-scroller__item" href="bag.html">Корзина</a>
           </nav>
         </div>
