--- a/perfumeshop/accounts/templates/accounts/auth/signup.html
+++ b/perfumeshop/accounts/templates/accounts/auth/signup.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load django_bootstrap5 %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/all.css">
 </head>
 <body>
-<nav class="navbar navbar-light pt-lg-5" style="background-color: white;">
+    <nav class="navbar navbar-light pt-lg-5" style="background-color: white;">
       <div class="container-fluid d-flex justify-content-around">
           <ul class="navbar-nav ms-2 fs-5" style="flex-direction: row">
       </ul>
@@ -23,38 +24,12 @@
         </div>
     </nav>
 
-    <div class="m-auto w-25 pt-lg-5">
-                  <form action="{% url 'accounts:login' %}" method="POST">
-                      {% csrf_token %}
-                      <!-- Email input -->
-                      <div class="form-outline mb-4">
-                        {{ form.username }}
-                        <label class="form-label" for="{{ form.username.id_for_label }}">Email address</label>
-                      </div>
 
-                      <!-- Password input -->
-                      <div class="form-outline mb-2">
-                        {{ form.password }}
-                        <label class="form-label" for="{{ form.password.id_for_label }}">Password</label>
-                      </div>
+        <form action="{% url 'accounts:signup' %}" class="m-auto w-50 pt-lg-5" method="POST">
+            {% csrf_token %}
+            {% bootstrap_form form layout='horizontal' %}
+            <input type="submit" class="btn btn-dark btn-block mb-2">
+        </form>
 
-                      <!-- 2 column grid layout for inline styling -->
-                      <div class="row mb-4 ms-4">
-                        <div class="col d-flex justify-content-center">
-                          <!-- Checkbox -->
-                        </div>
-                      </div>
-
-                      <!-- Submit button -->
-{#                      <button type="button" class="btn btn-dark btn-block mb-4 " style="width: 100%">Log in</button>#}
-                      <input class="btn btn-dark btn-block mb-4" type="submit" value="Log in">
-
-                      <!-- Register buttons -->
-                      <div class="text-center">
-                        <p class="m-0">Not a member? <a class="nav-link" href="{% url 'accounts:signup' %}">Register</a></p>
-
-                      </div>
-                    </form>
-              </div>
 </body>
 </html>
